manifests/hello-first/oauth2-proxy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-first-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-first-oauth2-proxy
  template:
    metadata:
      labels:
        app: hello-first-oauth2-proxy
    spec:
      containers:
      - name: hello-kubernetes
        image: quay.io/pusher/oauth2_proxy:latest
        ports:
        - containerPort: 4180
        args:
        - --cookie-secure=false
        - --http-address=0.0.0.0:4180
        - --upstream=http://hello-first
        - --email-domain=*
        - --provider=github
