manifests/hello-first/oauth2-proxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-first-oauth2-proxy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4180
  selector:
    app: hello-first-oauth2-proxy
