manifests/hello-first/oauth2-proxy/ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-first-oauth2-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: first.hello-with-auth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-first-oauth2-proxy
          servicePort: 80
